feat(auth): rbac3 rollout, governance docs and real-link gates
Converge authorization model onto RBAC3, update tenant and permission
governance docs, harden auth/session paths, and wire nightly real-link
E2E gates with schema and identity baselines.

Verification:
- Local MySQL migrated to role_permission baseline
- verify-scheduling-migration-smoke.sh on dev DB
- GitHub Actions nightly real-link now fails fast on missing schema

Made-with: Cursor