@@ -1,5 +1,10 @@
 package com.tiny.platform.infrastructure.menu.service;
 
+import com.tiny.platform.core.oauth.model.SecurityUser;
+import com.tiny.platform.infrastructure.auth.datascope.framework.DataScope;
+import com.tiny.platform.infrastructure.auth.datascope.framework.DataScopeContext;
+import com.tiny.platform.infrastructure.auth.datascope.framework.ResolvedDataScope;
+import com.tiny.platform.infrastructure.auth.org.repository.UserUnitRepository;
 import com.tiny.platform.infrastructure.core.exception.code.ErrorCode;
 import com.tiny.platform.infrastructure.core.exception.exception.BusinessException;
 import com.tiny.platform.infrastructure.core.exception.exception.NotFoundException;
@@ -9,60 +14,106 @@ import com.tiny.platform.infrastructure.auth.resource.dto.ResourceProjection;
 import com.tiny.platform.infrastructure.auth.resource.dto.ResourceRequestDto;
 import com.tiny.platform.infrastructure.auth.resource.dto.ResourceResponseDto;
 import com.tiny.platform.infrastructure.auth.resource.enums.ResourceType;
+import com.tiny.platform.infrastructure.auth.resource.repository.ApiEndpointEntryRepository;
 import com.tiny.platform.infrastructure.auth.resource.repository.ResourceRepository;
+import com.tiny.platform.infrastructure.auth.resource.repository.UiActionEntryRepository;
+import com.tiny.platform.infrastructure.auth.audit.domain.AuthorizationAuditEventType;
+import com.tiny.platform.infrastructure.auth.audit.domain.RequirementAwareAuditDetail;
+import com.tiny.platform.infrastructure.auth.audit.service.AuthorizationAuditService;
+import com.tiny.platform.infrastructure.auth.resource.service.CarrierCompatibilityBinding;
+import com.tiny.platform.infrastructure.auth.resource.service.CarrierCompatibilitySafetyService;
+import com.tiny.platform.infrastructure.auth.resource.service.CarrierPermissionRequirementEvaluator;
+import com.tiny.platform.infrastructure.auth.resource.service.ResourcePermissionBindingService;
 import com.tiny.platform.infrastructure.auth.resource.support.PlatformControlPlaneResourcePolicy;
-import com.tiny.platform.core.oauth.security.LegacyAuthConstants;
+import com.tiny.platform.infrastructure.auth.role.repository.RoleRepository;
+import com.tiny.platform.infrastructure.auth.user.repository.TenantUserRepository;
+import com.tiny.platform.infrastructure.menu.domain.MenuEntry;
+import com.tiny.platform.infrastructure.menu.repository.MenuEntryRepository;
+import com.tiny.platform.infrastructure.tenant.config.PlatformTenantResolver;
 import com.tiny.platform.core.oauth.tenant.TenantContext;
-import com.tiny.platform.infrastructure.tenant.config.PlatformTenantProperties;
-import com.tiny.platform.infrastructure.tenant.repository.TenantRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 
 import org.springframework.stereotype.Service;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Query;
+import jakarta.persistence.criteria.Predicate;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 
-import java.util.Comparator;
-import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.HashMap;
 import java.util.ArrayList;
-import java.util.stream.Stream;
 
 
 /**
  * 菜单业务实现类，专注于 type=0/1 的菜单和目录。
  * <p>租户范围以 {@link TenantContext#getActiveTenantId()} 为准，不以 user.tenant_id 为依据。
- * 见 docs/TINY_PLATFORM_AUTHORIZATION_LEGACY_REMOVAL_PLAN.md §3。
+ * PLATFORM 作用域且活动租户为空时，菜单资源使用 {@link PlatformTenantResolver} 解析的平台租户 ID。
  */
 @Service
 public class MenuServiceImpl implements MenuService {
+    private static final String ACTIVE = "ACTIVE";
+    private static final Logger logger = LoggerFactory.getLogger(MenuServiceImpl.class);
+    private static final String CARRIER_MENU = "MENU";
+
     private final ResourceRepository resourceRepository;
-    private final TenantRepository tenantRepository;
-    private final PlatformTenantProperties platformTenantProperties;
+    private final MenuEntryRepository menuEntryRepository;
+    private final UiActionEntryRepository uiActionEntryRepository;
+    private final ApiEndpointEntryRepository apiEndpointEntryRepository;
+    private final TenantUserRepository tenantUserRepository;
+    private final UserUnitRepository userUnitRepository;
+    private final PlatformTenantResolver platformTenantResolver;
+    private final ResourcePermissionBindingService resourcePermissionBindingService;
+    private final CarrierCompatibilitySafetyService carrierCompatibilitySafetyService;
+    private final CarrierPermissionRequirementEvaluator carrierPermissionRequirementEvaluator;
+    private final AuthorizationAuditService authorizationAuditService;
+    private final RoleRepository roleRepository;
 
     @PersistenceContext
-    private EntityManager entityManager; // 注入 EntityManager 用于原生 Hibernate 查询
+    private EntityManager entityManager;
 
     public MenuServiceImpl(ResourceRepository resourceRepository,
-                           TenantRepository tenantRepository,
-                           PlatformTenantProperties platformTenantProperties) {
+                           MenuEntryRepository menuEntryRepository,
+                           UiActionEntryRepository uiActionEntryRepository,
+                           ApiEndpointEntryRepository apiEndpointEntryRepository,
+                           TenantUserRepository tenantUserRepository,
+                           UserUnitRepository userUnitRepository,
+                           PlatformTenantResolver platformTenantResolver,
+                           ResourcePermissionBindingService resourcePermissionBindingService,
+                           CarrierCompatibilitySafetyService carrierCompatibilitySafetyService,
+                           CarrierPermissionRequirementEvaluator carrierPermissionRequirementEvaluator,
+                           AuthorizationAuditService authorizationAuditService,
+                           RoleRepository roleRepository) {
         this.resourceRepository = resourceRepository;
-        this.tenantRepository = tenantRepository;
-        this.platformTenantProperties = platformTenantProperties;
+        this.menuEntryRepository = menuEntryRepository;
+        this.uiActionEntryRepository = uiActionEntryRepository;
+        this.apiEndpointEntryRepository = apiEndpointEntryRepository;
+        this.tenantUserRepository = tenantUserRepository;
+        this.userUnitRepository = userUnitRepository;
+        this.platformTenantResolver = platformTenantResolver;
+        this.resourcePermissionBindingService = resourcePermissionBindingService;
+        this.carrierCompatibilitySafetyService = carrierCompatibilitySafetyService;
+        this.carrierPermissionRequirementEvaluator = carrierPermissionRequirementEvaluator;
+        this.authorizationAuditService = authorizationAuditService;
+        this.roleRepository = roleRepository;
     }
 
     private Long normalizeParentId(Long parentId) {
@@ -76,19 +127,18 @@ public class MenuServiceImpl implements MenuService {
      * 分页查询菜单（支持type、parentId、title、enabled多条件）
      */
     @Override
+    @DataScope(module = "menu")
     public Page<ResourceResponseDto> menus(ResourceRequestDto query, Pageable pageable) {
-        // 查询 type=0/1（目录和菜单）
-        List<ResourceType> types = List.of(ResourceType.DIRECTORY, ResourceType.MENU); // 目录和菜单
-        List<Integer> typeCodes = types.stream().map(ResourceType::getCode).toList();
-        
-        // 原生 Hibernate 方式（推荐使用）
-        return findMenusByNativeHibernate(query, typeCodes, pageable);
-        
-        // 原生SQL方式，直接返回leaf字段（如需切换，取消注释即可）
-        // return findMenusByNativeSql(query, typeCodes, pageable);
-        
-        // JPQL DTO投影方式（如需切换，取消注释即可）
-        // return findMenusByJpqlDto(query, typeCodes, pageable);
+        Long tenantId = requireTenantId();
+        LinkedHashSet<Long> visibleCreatorIds = resolveVisibleCreatorIdsForRead(tenantId);
+        if (requiresDataScopeFilter() && visibleCreatorIds.isEmpty()) {
+            return Page.empty(pageable);
+        }
+        Page<MenuEntry> page = menuEntryRepository.findAll(
+            buildMenuEntrySpecification(query, tenantId, visibleCreatorIds, false),
+            normalizeMenuPageable(pageable)
+        );
+        return page.map(menu -> toDto(menu, tenantId));
     }
     
     /**
@@ -97,6 +147,10 @@ public class MenuServiceImpl implements MenuService {
      */
     private Page<ResourceResponseDto> findMenusByNativeHibernate(ResourceRequestDto query, List<Integer> typeCodes, Pageable pageable) {
         Long tenantId = requireTenantId();
+        LinkedHashSet<Long> visibleCreatorIds = resolveVisibleCreatorIdsForRead(tenantId);
+        if (requiresDataScopeFilter() && visibleCreatorIds.isEmpty()) {
+            return Page.empty(pageable);
+        }
         // 构建动态 SQL 查询条件
         StringBuilder sqlBuilder = new StringBuilder();
         StringBuilder countSqlBuilder = new StringBuilder();
@@ -162,6 +216,7 @@ public class MenuServiceImpl implements MenuService {
         // 添加类型过滤条件
         sqlBuilder.append(" AND r.type IN (:types)");
         countSqlBuilder.append(" AND r.type IN (:types)");
+        appendMenuDataScopeFilter(sqlBuilder, countSqlBuilder, visibleCreatorIds);
         
         // 添加排序
         sqlBuilder.append(" ORDER BY r.sort ASC");
@@ -197,6 +252,10 @@ public class MenuServiceImpl implements MenuService {
         if (query.getEnabled() != null) {
             sqlQuery.setParameter("enabled", query.getEnabled());
             countQuery.setParameter("enabled", query.getEnabled());
+        }
+        if (requiresDataScopeFilter()) {
+            sqlQuery.setParameter("visibleCreatorIds", visibleCreatorIds);
+            countQuery.setParameter("visibleCreatorIds", visibleCreatorIds);
         }
         
         sqlQuery.setParameter("types", typeCodes);
@@ -239,6 +298,12 @@ public class MenuServiceImpl implements MenuService {
         dto.setKeepAlive(Boolean.TRUE.equals(row[10])); // keepAlive
         dto.setPermission((String) row[11]); // permission
         dto.setType(safeToInteger(row[12])); // type - 安全转换为 Integer
+        Integer typeCode = dto.getType();
+        if (typeCode != null) {
+            ResourceType resourceType = ResourceType.fromCode(typeCode);
+            dto.setTypeName(resourceType.getDescription());
+            dto.setCarrierKind(getCarrierKind(resourceType));
+        }
         dto.setParentId(row[13] != null ? ((Number) row[13]).longValue() : null); // parentId
         dto.setEnabled(safeToBoolean(row[14])); // enabled
         dto.setLeaf(safeToBoolean(row[15])); // leaf
@@ -308,8 +373,10 @@ public class MenuServiceImpl implements MenuService {
      */
     @Override
     public List<ResourceResponseDto> menuTree() {
-        List<Resource> menus = findTreeMenusForCurrentUser(requireTenantId());
-        List<ResourceResponseDto> fullTree = buildResourceTree(menus);
+        List<MenuEntry> menus = findTreeMenusForCurrentUser(requireTenantId());
+        List<ResourceResponseDto> fullTree = buildDtoTree(menus.stream()
+            .map(this::toDto)
+            .toList());
 
         // 1. 获取所有节点的扁平化列表，用于后续查找 redirect 目标
         List<ResourceResponseDto> flatList = new ArrayList<>();
@@ -332,10 +399,16 @@ public class MenuServiceImpl implements MenuService {
      */
     @Override
     public List<ResourceResponseDto> menuTreeAll() {
-        List<Resource> menus = resourceRepository.findByTypeInAndTenantIdOrderBySortAsc(
-                List.of(ResourceType.DIRECTORY, ResourceType.MENU), requireTenantId());
-        menus = filterPlatformOnlyMenus(menus);
-        return buildResourceTree(menus);
+        Long tenantId = requireTenantId();
+        List<MenuEntry> menus = menuEntryRepository.findByTenantIdAndTypeInOrderBySortAsc(
+            tenantId,
+            List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode())
+        );
+        List<ResourceResponseDto> dtos = menus.stream()
+            .map(this::toDto)
+            .filter(this::canAccessPlatformMenu)
+            .toList();
+        return buildDtoTree(dtos);
     }
 
     /**
@@ -403,7 +476,7 @@ public class MenuServiceImpl implements MenuService {
      */
     @Override
     public List<ResourceResponseDto> getMenusByParentId(Long parentId) {
-        List<Resource> menus = findChildMenusForCurrentUser(normalizeParentId(parentId), requireTenantId());
+        List<MenuEntry> menus = findChildMenusForCurrentUser(normalizeParentId(parentId), requireTenantId());
         return menus.stream().map(this::toDto).collect(Collectors.toList());
     }
 
@@ -424,6 +497,8 @@ public class MenuServiceImpl implements MenuService {
         
         Resource resource = new Resource();
         resource.setTenantId(tenantId);
+        resource.setResourceLevel(TenantContext.isPlatformScope() ? "PLATFORM" : "TENANT");
+        resource.setCreatedBy(extractCurrentUserId());
         resource.setName(resourceDto.getName());
         resource.setTitle(resourceDto.getTitle());
         resource.setUrl(resourceDto.getUrl());
@@ -439,7 +514,10 @@ public class MenuServiceImpl implements MenuService {
         resource.setPermission(resourceDto.getPermission());
         resource.setType(ResourceType.fromCode(resourceDto.getType()));
         resource.setParentId(resourceDto.getParentId());
-        return resourceRepository.save(resource);
+        resourcePermissionBindingService.bindResource(resource, resource.getCreatedBy());
+        MenuEntry savedCarrier = menuEntryRepository.save(toMenuEntry(resource));
+        carrierCompatibilitySafetyService.replaceCompatibilityRequirement(toCompatibilityBinding(savedCarrier));
+        return toResource(savedCarrier);
     }
 
     /**
@@ -448,30 +526,33 @@ public class MenuServiceImpl implements MenuService {
     @Override
     public Resource updateMenu(ResourceCreateUpdateDto resourceDto) {
         Long tenantId = requireTenantId();
-        Resource resource = resourceRepository.findById(resourceDto.getId())
-                .filter(r -> r.getTenantId().equals(tenantId))
+        MenuEntry carrier = menuEntryRepository.findById(resourceDto.getId())
+                .filter(r -> Objects.equals(r.getTenantId(), tenantId))
                 .orElseThrow(() -> new RuntimeException("菜单不存在"));
         
         // 验证父ID设置
         resourceDto.setParentId(normalizeParentId(resourceDto.getParentId()));
         validateParentId(resourceDto.getId(), resourceDto.getParentId());
         
-        resource.setName(resourceDto.getName());
-        resource.setTitle(resourceDto.getTitle());
-        resource.setUrl(resourceDto.getUrl());
-        resource.setUri(StringUtils.hasText(resourceDto.getUri()) ? resourceDto.getUri() : "");
-        resource.setMethod(StringUtils.hasText(resourceDto.getMethod()) ? resourceDto.getMethod() : "");
-        resource.setIcon(resourceDto.getIcon());
-        resource.setShowIcon(resourceDto.isShowIcon());
-        resource.setSort(resourceDto.getSort());
-        resource.setComponent(resourceDto.getComponent());
-        resource.setRedirect(resourceDto.getRedirect());
-        resource.setHidden(resourceDto.isHidden());
-        resource.setKeepAlive(resourceDto.isKeepAlive());
-        resource.setPermission(resourceDto.getPermission());
-        resource.setType(ResourceType.fromCode(resourceDto.getType()));
-        resource.setParentId(resourceDto.getParentId());
-        return resourceRepository.save(resource);
+        carrier.setName(resourceDto.getName());
+        carrier.setTitle(resourceDto.getTitle());
+        carrier.setPath(resourceDto.getUrl());
+        carrier.setIcon(resourceDto.getIcon());
+        carrier.setShowIcon(resourceDto.isShowIcon());
+        carrier.setSort(resourceDto.getSort());
+        carrier.setComponent(resourceDto.getComponent());
+        carrier.setRedirect(resourceDto.getRedirect());
+        carrier.setHidden(resourceDto.isHidden());
+        carrier.setKeepAlive(resourceDto.isKeepAlive());
+        carrier.setPermission(resourceDto.getPermission());
+        carrier.setType(resourceDto.getType());
+        carrier.setParentId(resourceDto.getParentId());
+        Resource marker = toResource(carrier);
+        resourcePermissionBindingService.bindResource(marker, extractCurrentUserId());
+        carrier.setRequiredPermissionId(marker.getRequiredPermissionId());
+        MenuEntry savedCarrier = menuEntryRepository.save(carrier);
+        carrierCompatibilitySafetyService.replaceCompatibilityRequirement(toCompatibilityBinding(savedCarrier));
+        return toResource(savedCarrier);
     }
     
     /**
@@ -494,18 +575,18 @@ public class MenuServiceImpl implements MenuService {
         }
         
         // 检查父菜单是否存在
-        Resource parentResource = resourceRepository.findById(normalizedParentId)
-                .filter(r -> r.getTenantId().equals(tenantId))
+        MenuEntry parentMenu = menuEntryRepository.findById(normalizedParentId)
+                .filter(m -> Objects.equals(m.getTenantId(), tenantId))
                 .orElseThrow(() -> new BusinessException(
                     ErrorCode.NOT_FOUND,
                     "父菜单不存在，ID: " + normalizedParentId
                 ));
         
         // 父菜单必须是目录类型
-        if (parentResource.getType() != ResourceType.DIRECTORY) {
+        if (!Objects.equals(parentMenu.getType(), ResourceType.DIRECTORY.getCode())) {
             throw new BusinessException(
                 ErrorCode.VALIDATION_ERROR,
-                "父菜单必须是目录类型，当前类型: " + parentResource.getType()
+                "父菜单必须是目录类型，当前类型: " + parentMenu.getType()
             );
         }
         
@@ -540,8 +621,8 @@ public class MenuServiceImpl implements MenuService {
             visitedIds.add(currentParentId);
             
             // 获取当前父菜单的父ID
-            Resource currentParent = resourceRepository.findById(currentParentId)
-                    .filter(r -> r.getTenantId().equals(tenantId))
+            MenuEntry currentParent = menuEntryRepository.findById(currentParentId)
+                    .filter(m -> Objects.equals(m.getTenantId(), tenantId))
                     .orElse(null);
             if (currentParent == null) {
                 break;
@@ -555,23 +636,27 @@ public class MenuServiceImpl implements MenuService {
     /**
      * 删除菜单
      * 如果菜单有子菜单，会先删除所有子菜单（级联删除）
-     * 同时会删除角色与资源的关联关系
+     * 若该菜单是某权限在当前租户下的最后一个载体，则同步清理对应的 role_permission 关系
      */
     @Override
     @Transactional
     public void deleteMenu(Long id) {
         Long tenantId = requireTenantId();
-        // 检查菜单是否存在
-        Resource resource = resourceRepository.findById(id)
-                .filter(r -> r.getTenantId().equals(tenantId))
+        // 检查菜单是否存在（优先使用 carrier 读链，resource 仅作兼容删除载体）
+        MenuEntry menu = menuEntryRepository.findById(id)
+                .filter(m -> Objects.equals(m.getTenantId(), tenantId))
                 .orElseThrow(() -> new NotFoundException(
                         "菜单不存在: " + id));
+        if (!Objects.equals(menu.getType(), ResourceType.DIRECTORY.getCode())
+            && !Objects.equals(menu.getType(), ResourceType.MENU.getCode())) {
+            throw new BusinessException(ErrorCode.VALIDATION_ERROR, "仅支持删除目录/菜单载体");
+        }
         
         // 递归删除所有子菜单
         deleteMenuRecursive(id);
         
         // 删除当前菜单（会先删除角色关联）
-        deleteResourceWithRoleAssociations(id);
+        deleteResourceWithRoleAssociations(id, menu.getRequiredPermissionId());
     }
     
     /**
@@ -579,33 +664,38 @@ public class MenuServiceImpl implements MenuService {
      */
     private void deleteMenuRecursive(Long parentId) {
         Long tenantId = requireTenantId();
-        // 查找所有子菜单（包括目录和菜单类型）
-        List<Resource> children = resourceRepository.findByParentIdAndTenantIdOrderBySortAsc(parentId, tenantId);
+        // 查找所有子菜单（包括目录和菜单类型），优先 menu 载体读链
+        List<MenuEntry> children = menuEntryRepository.findByTenantIdAndTypeInAndParentIdOrderBySortAsc(
+            tenantId,
+            List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode()),
+            parentId
+        );
         
         // 递归删除每个子菜单
-        for (Resource child : children) {
+        for (MenuEntry child : children) {
             deleteMenuRecursive(child.getId());
-            deleteResourceWithRoleAssociations(child.getId());
+            deleteResourceWithRoleAssociations(child.getId(), child.getRequiredPermissionId());
         }
     }
     
     /**
-     * 删除资源及其与角色的关联关系
-     * 先删除 role_resource 表中的关联记录，再删除资源本身
+     * 删除资源及其与角色的关联关系。
+     * <p>当前权限真相源已经是 {@code permission/role_permission}，因此删除载体资源时不应直接把角色授权全部撤掉。
+     * 仅当该资源是当前租户下某个 permission 的最后一个载体时，才顺带清理对应的 role_permission。</p>
      */
-    private void deleteResourceWithRoleAssociations(Long resourceId) {
+    private void deleteResourceWithRoleAssociations(Long resourceId, Long requiredPermissionId) {
         Long tenantId = requireTenantId();
-        // 先删除 role_resource 表中的关联记录
-        Query deleteRoleResourceQuery = entityManager.createNativeQuery(
-                "DELETE FROM role_resource WHERE resource_id = :resourceId AND tenant_id = :tenantId");
-        deleteRoleResourceQuery.setParameter("resourceId", resourceId);
-        deleteRoleResourceQuery.setParameter("tenantId", tenantId);
-        deleteRoleResourceQuery.executeUpdate();
-        
-        // 然后删除资源本身
-        resourceRepository.findById(resourceId)
-                .filter(r -> r.getTenantId().equals(tenantId))
-                .ifPresent(resourceRepository::delete);
+        // Resource compatibility rows are no longer maintained in runtime.
+        // Deletion only targets carrier tables; legacy resource cleanup (if needed) is handled out-of-band.
+        deleteCarrierEntriesById(resourceId);
+        if (requiredPermissionId == null) {
+            return;
+        }
+        boolean permissionStillReferenced = carrierCompatibilitySafetyService.existsPermissionReference(requiredPermissionId, tenantId);
+        if (permissionStillReferenced) {
+            return;
+        }
+        roleRepository.deleteRolePermissionRelationsByPermissionIdAndTenantId(requiredPermissionId, tenantId);
     }
 
     /**
@@ -625,11 +715,27 @@ public class MenuServiceImpl implements MenuService {
     @Transactional
     public Resource updateMenuSort(Long id, Integer sort) {
         Long tenantId = requireTenantId();
-        Resource resource = resourceRepository.findById(id)
+        MenuEntry carrier = menuEntryRepository.findById(id)
             .filter(existing -> Objects.equals(existing.getTenantId(), tenantId))
             .orElseThrow(() -> new RuntimeException("菜单不存在"));
-        resource.setSort(sort);
-        return resourceRepository.save(resource);
+        carrier.setSort(sort);
+        MenuEntry savedCarrier = menuEntryRepository.save(carrier);
+        return toResource(savedCarrier);
+    }
+
+    private CarrierCompatibilityBinding toCompatibilityBinding(MenuEntry menu) {
+        if (menu == null || menu.getId() == null) {
+            return null;
+        }
+        return new CarrierCompatibilityBinding(
+            CARRIER_MENU,
+            menu.getId(),
+            menu.getTenantId(),
+            menu.getRequiredPermissionId(),
+            menu.getCreatedAt(),
+            menu.getCreatedBy(),
+            menu.getUpdatedAt()
+        );
     }
 
     /**
@@ -673,6 +779,46 @@ public class MenuServiceImpl implements MenuService {
         }
     }
 
+    private List<ResourceResponseDto> buildDtoTree(List<ResourceResponseDto> resources) {
+        try {
+            Map<Long, ResourceResponseDto> resourceMap = new HashMap<>();
+            List<ResourceResponseDto> rootResources = new ArrayList<>();
+
+            for (ResourceResponseDto resource : resources) {
+                resource.setChildren(new ArrayList<>());
+                resourceMap.put(resource.getId(), resource);
+            }
+
+            for (ResourceResponseDto resource : resources) {
+                Long parentId = normalizeParentId(resource.getParentId());
+                if (parentId == null) {
+                    rootResources.add(resource);
+                    continue;
+                }
+                ResourceResponseDto parent = resourceMap.get(parentId);
+                if (parent != null) {
+                    parent.getChildren().add(resource);
+                }
+            }
+
+            refreshLeafFlags(rootResources);
+            return rootResources;
+        } catch (Exception e) {
+            return resources;
+        }
+    }
+
+    private void refreshLeafFlags(List<ResourceResponseDto> nodes) {
+        if (nodes == null) {
+            return;
+        }
+        for (ResourceResponseDto node : nodes) {
+            List<ResourceResponseDto> children = node.getChildren();
+            node.setLeaf(children == null || children.isEmpty());
+            refreshLeafFlags(children);
+        }
+    }
+
     /**
      * 实体转DTO
      */
@@ -698,13 +844,17 @@ public class MenuServiceImpl implements MenuService {
             dto.setHidden(Boolean.TRUE.equals(resource.getHidden()));
             dto.setKeepAlive(Boolean.TRUE.equals(resource.getKeepAlive()));
             dto.setPermission(resource.getPermission());
+            dto.setRequiredPermissionId(resource.getRequiredPermissionId());
             dto.setType(resource.getType() != null ? resource.getType().getCode() : null);
             dto.setTypeName(resource.getType() != null ? resource.getType().getDescription() : null);
+            dto.setCarrierKind(resource.getType() != null ? getCarrierKind(resource.getType()) : null);
             dto.setParentId(normalizeParentId(resource.getParentId()));
             dto.setEnabled(Boolean.TRUE.equals(resource.getEnabled()));
             
             // 判断是否为叶子节点（没有子资源）
-            Boolean isLeaf = !resourceRepository.existsByParentIdAndTenantId(resource.getId(), requireTenantId());
+            Long tenantId = requireTenantId();
+            Boolean isLeaf = !menuEntryRepository.existsByParentIdAndTenantId(resource.getId(), tenantId)
+                && !uiActionEntryRepository.existsByParentMenuIdAndTenantId(resource.getId(), tenantId);
             dto.setLeaf(Boolean.TRUE.equals(isLeaf));
             
             // 初始化children为空集合，避免null指针异常
@@ -726,6 +876,108 @@ public class MenuServiceImpl implements MenuService {
             dto.setChildren(new ArrayList<>());
             return dto;
         }
+    }
+
+    private ResourceResponseDto toDto(MenuEntry menu) {
+        return toDto(menu, menu != null ? menu.getTenantId() : null);
+    }
+
+    private ResourceResponseDto toDto(MenuEntry menu, Long tenantId) {
+        if (menu == null) {
+            return null;
+        }
+        ResourceResponseDto dto = new ResourceResponseDto();
+        dto.setRecordTenantId(menu.getTenantId());
+        dto.setId(menu.getId());
+        dto.setName(menu.getName());
+        dto.setTitle(menu.getTitle());
+        dto.setUrl(menu.getPath());
+        dto.setIcon(menu.getIcon());
+        dto.setShowIcon(Boolean.TRUE.equals(menu.getShowIcon()));
+        dto.setSort(menu.getSort());
+        dto.setComponent(menu.getComponent());
+        dto.setRedirect(menu.getRedirect());
+        dto.setHidden(Boolean.TRUE.equals(menu.getHidden()));
+        dto.setKeepAlive(Boolean.TRUE.equals(menu.getKeepAlive()));
+        dto.setPermission(menu.getPermission());
+        dto.setRequiredPermissionId(menu.getRequiredPermissionId());
+        dto.setType(menu.getType());
+        if (menu.getType() != null) {
+            ResourceType resourceType = ResourceType.fromCode(menu.getType());
+            dto.setTypeName(resourceType != null ? resourceType.getDescription() : null);
+            dto.setCarrierKind(resourceType != null ? getCarrierKind(resourceType) : null);
+        }
+        dto.setParentId(normalizeParentId(menu.getParentId()));
+        dto.setEnabled(Boolean.TRUE.equals(menu.getEnabled()));
+        if (tenantId != null && menu.getId() != null) {
+            dto.setLeaf(!menuEntryRepository.existsByParentIdAndTenantId(menu.getId(), tenantId));
+        }
+        dto.setChildren(new ArrayList<>());
+        return dto;
+    }
+
+    private Resource toResource(MenuEntry menu) {
+        Resource resource = new Resource();
+        resource.setId(menu.getId());
+        resource.setTenantId(menu.getTenantId());
+        resource.setResourceLevel(menu.getResourceLevel());
+        resource.setName(menu.getName());
+        resource.setTitle(menu.getTitle());
+        resource.setUrl(menu.getPath());
+        resource.setUri("");
+        resource.setMethod("");
+        resource.setIcon(menu.getIcon());
+        resource.setShowIcon(Boolean.TRUE.equals(menu.getShowIcon()));
+        resource.setSort(menu.getSort());
+        resource.setComponent(menu.getComponent());
+        resource.setRedirect(menu.getRedirect());
+        resource.setHidden(Boolean.TRUE.equals(menu.getHidden()));
+        resource.setKeepAlive(Boolean.TRUE.equals(menu.getKeepAlive()));
+        resource.setPermission(menu.getPermission());
+        resource.setRequiredPermissionId(menu.getRequiredPermissionId());
+        resource.setType(ResourceType.fromCode(menu.getType()));
+        resource.setParentId(normalizeParentId(menu.getParentId()));
+        resource.setCreatedAt(menu.getCreatedAt());
+        resource.setCreatedBy(menu.getCreatedBy());
+        resource.setUpdatedAt(menu.getUpdatedAt());
+        resource.setEnabled(Boolean.TRUE.equals(menu.getEnabled()));
+        return resource;
+    }
+
+    private MenuEntry toMenuEntry(Resource resource) {
+        MenuEntry menu = new MenuEntry();
+        menu.setId(resource.getId());
+        menu.setTenantId(resource.getTenantId());
+        menu.setResourceLevel(resource.getResourceLevel());
+        menu.setName(resource.getName());
+        menu.setTitle(resource.getTitle());
+        menu.setPath(resource.getUrl());
+        menu.setIcon(resource.getIcon());
+        menu.setShowIcon(Boolean.TRUE.equals(resource.getShowIcon()));
+        menu.setSort(resource.getSort());
+        menu.setComponent(resource.getComponent());
+        menu.setRedirect(resource.getRedirect());
+        menu.setHidden(Boolean.TRUE.equals(resource.getHidden()));
+        menu.setKeepAlive(Boolean.TRUE.equals(resource.getKeepAlive()));
+        menu.setPermission(resource.getPermission());
+        menu.setRequiredPermissionId(resource.getRequiredPermissionId());
+        menu.setType(resource.getType().getCode());
+        menu.setParentId(normalizeParentId(resource.getParentId()));
+        menu.setEnabled(Boolean.TRUE.equals(resource.getEnabled()));
+        menu.setCreatedAt(resource.getCreatedAt());
+        menu.setCreatedBy(resource.getCreatedBy());
+        menu.setUpdatedAt(resource.getUpdatedAt());
+        return menu;
+    }
+
+    private void deleteCarrierEntriesById(Long resourceId) {
+        if (resourceId == null) {
+            return;
+        }
+        List<Long> ids = List.of(resourceId);
+        menuEntryRepository.deleteAllByIdInBatch(ids);
+        uiActionEntryRepository.deleteAllByIdInBatch(ids);
+        apiEndpointEntryRepository.deleteAllByIdInBatch(ids);
     }
 
     /**
@@ -763,10 +1015,23 @@ public class MenuServiceImpl implements MenuService {
             dto.setKeepAlive(Boolean.TRUE.equals(proj.getKeepAlive()));
             dto.setPermission(proj.getPermission());
             dto.setType(safeToInteger(proj.getType()));
+            if (dto.getType() != null) {
+                ResourceType resourceType = ResourceType.fromCode(dto.getType());
+                dto.setTypeName(resourceType.getDescription());
+                dto.setCarrierKind(getCarrierKind(resourceType));
+            }
             dto.setParentId(proj.getParentId());
             dto.setLeaf(proj.getLeaf() != null && proj.getLeaf() == 1);
             return dto;
         });
+    }
+
+    private String getCarrierKind(ResourceType resourceType) {
+        return switch (resourceType) {
+            case DIRECTORY, MENU -> "menu";
+            case BUTTON -> "ui_action";
+            case API -> "api_endpoint";
+        };
     }
     
     /**
@@ -789,100 +1054,100 @@ public class MenuServiceImpl implements MenuService {
     }
 
     /**
-     * 按条件查询菜单（type=0/1），返回list结构
+     * 按条件查询菜单（type=0/1），返回 list 结构。
+     * <p>数据范围由 {@code @DataScope} + {@link DataScopeContext} 注入；几何与有效角色随
+     * {@link com.tiny.platform.core.oauth.tenant.TenantContext} 的 active scope 经
+     * {@link com.tiny.platform.infrastructure.auth.datascope.service.DataScopeResolverService} 解析（Contract B）。</p>
      */
     @Override
-    @SuppressWarnings("unchecked")
+    @DataScope(module = "menu")
     public List<ResourceResponseDto> list(ResourceRequestDto query) {
         Long tenantId = requireTenantId();
-        // 查询 type=0/1（目录和菜单）
-        List<ResourceType> types = List.of(ResourceType.DIRECTORY, ResourceType.MENU); // 目录和菜单
-        List<Integer> typeCodes = types.stream().map(ResourceType::getCode).toList();
-        StringBuilder sqlBuilder = new StringBuilder();
+        LinkedHashSet<Long> visibleCreatorIds = resolveVisibleCreatorIdsForRead(tenantId);
+        if (requiresDataScopeFilter() && visibleCreatorIds.isEmpty()) {
+            return List.of();
+        }
+        return menuEntryRepository.findAll(
+                buildMenuEntrySpecification(query, tenantId, visibleCreatorIds, true),
+                Sort.by(Sort.Order.asc("sort"), Sort.Order.asc("id"))
+            )
+            .stream()
+            .map(menu -> toDto(menu, tenantId))
+            .filter(this::canAccessTreeMenu)
+            .collect(Collectors.toList());
+    }
 
-        sqlBuilder.append("""
-        SELECT r.id,
-               r.name,
-               r.title,
-               r.url,
-               r.icon,
-               r.show_icon AS showIcon,
-               r.sort,
-               r.component,
-               r.redirect,
-               r.hidden,
-               r.keep_alive AS keepAlive,
-               r.permission,
-               r.type,
-               r.parent_id AS parentId,
-               r.enabled,
-               CASE WHEN EXISTS (
-                   SELECT 1 FROM resource c WHERE c.parent_id = r.id AND c.tenant_id = :tenantId
-               ) THEN 0 ELSE 1 END AS leaf
-        FROM resource r
-        WHERE 1=1
-        """);
+    private Pageable normalizeMenuPageable(Pageable pageable) {
+        if (pageable.getSort().isSorted()) {
+            return pageable;
+        }
+        return PageRequest.of(
+            pageable.getPageNumber(),
+            pageable.getPageSize(),
+            Sort.by(Sort.Order.asc("sort"), Sort.Order.asc("id"))
+        );
+    }
 
-        // 动态条件拼接
-        sqlBuilder.append(" AND r.tenant_id = :tenantId");
-        if (query.getParentId() != null) {
-            sqlBuilder.append(" AND r.parent_id = :parentId");
-        } else {
-            sqlBuilder.append(" AND r.parent_id IS NULL");
-        }
-        if (StringUtils.hasText(query.getTitle())) {
-            sqlBuilder.append(" AND r.title LIKE :title");
-        }
-        if (StringUtils.hasText(query.getName())) {
-            sqlBuilder.append(" AND r.name LIKE :name");
-        }
-        if (StringUtils.hasText(query.getPermission())) {
-            sqlBuilder.append(" AND r.permission LIKE :permission");
-        }
-        if (query.getEnabled() != null) {
-            sqlBuilder.append(" AND r.enabled = :enabled");
-        }
+    private Specification<MenuEntry> buildMenuEntrySpecification(ResourceRequestDto query,
+                                                                 Long tenantId,
+                                                                 LinkedHashSet<Long> visibleCreatorIds,
+                                                                 boolean rootOnlyWhenParentMissing) {
+        return (root, criteriaQuery, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.equal(root.get("tenantId"), tenantId));
 
-        sqlBuilder.append(" AND r.type IN (:types)");
-        sqlBuilder.append(" ORDER BY r.sort ASC");
+            if (query.getType() != null) {
+                predicates.add(criteriaBuilder.equal(root.get("type"), query.getType()));
+            } else {
+                predicates.add(root.get("type").in(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode()));
+            }
 
-        Query sqlQuery = entityManager.createNativeQuery(sqlBuilder.toString());
+            Long normalizedParentId = normalizeParentId(query.getParentId());
+            if (query.getParentId() != null) {
+                if (normalizedParentId == null) {
+                    predicates.add(criteriaBuilder.isNull(root.get("parentId")));
+                } else {
+                    predicates.add(criteriaBuilder.equal(root.get("parentId"), normalizedParentId));
+                }
+            } else if (rootOnlyWhenParentMissing) {
+                predicates.add(criteriaBuilder.isNull(root.get("parentId")));
+            }
 
-        // 设置参数
-        sqlQuery.setParameter("tenantId", tenantId);
-        if (query.getParentId() != null) {
-            sqlQuery.setParameter("parentId", query.getParentId());
-        }
-        if (StringUtils.hasText(query.getTitle())) {
-            sqlQuery.setParameter("title", "%" + query.getTitle() + "%");
-        }
-        if (StringUtils.hasText(query.getName())) {
-            sqlQuery.setParameter("name", "%" + query.getName() + "%");
-        }
-        if (StringUtils.hasText(query.getPermission())) {
-            sqlQuery.setParameter("permission", "%" + query.getPermission() + "%");
-        }
-        if (query.getEnabled() != null) {
-            sqlQuery.setParameter("enabled", query.getEnabled());
-        }
-        sqlQuery.setParameter("types", typeCodes);
-
-        List<Object[]> results = sqlQuery.getResultList();
-        return results.stream()
-                .map(this::mapToResourceResponseDto)
-                .filter(this::canAccessTreeMenu)
-                .collect(Collectors.toList());
+            if (StringUtils.hasText(query.getTitle())) {
+                predicates.add(criteriaBuilder.like(root.get("title"), "%" + query.getTitle() + "%"));
+            }
+            if (StringUtils.hasText(query.getName())) {
+                predicates.add(criteriaBuilder.like(root.get("name"), "%" + query.getName() + "%"));
+            }
+            if (StringUtils.hasText(query.getPermission())) {
+                predicates.add(criteriaBuilder.like(root.get("permission"), "%" + query.getPermission() + "%"));
+            }
+            if (query.getEnabled() != null) {
+                predicates.add(criteriaBuilder.equal(root.get("enabled"), query.getEnabled()));
+            }
+            if (requiresDataScopeFilter()) {
+                predicates.add(root.get("createdBy").in(visibleCreatorIds));
+            }
+            return criteriaBuilder.and(predicates.toArray(Predicate[]::new));
+        };
     }
 
     private Long requireTenantId() {
         Long tenantId = TenantContext.getActiveTenantId();
-        if (tenantId == null) {
-            throw new BusinessException(ErrorCode.MISSING_PARAMETER, "缺少租户信息");
+        if (tenantId != null && tenantId > 0) {
+            return tenantId;
         }
-        return tenantId;
+        if (TenantContext.isPlatformScope()) {
+            Long platformTenantId = platformTenantResolver.getPlatformTenantId();
+            if (platformTenantId == null || platformTenantId <= 0) {
+                throw new BusinessException(ErrorCode.MISSING_PARAMETER, "平台租户未配置或不存在");
+            }
+            return platformTenantId;
+        }
+        throw new BusinessException(ErrorCode.MISSING_PARAMETER, "缺少租户信息");
     }
 
-    private List<Resource> filterPlatformOnlyMenus(List<Resource> menus) {
+    private List<MenuEntry> filterPlatformOnlyMenus(List<MenuEntry> menus) {
         if (menus == null || menus.isEmpty()) {
             return List.of();
         }
@@ -891,108 +1156,101 @@ public class MenuServiceImpl implements MenuService {
             .toList();
     }
 
-    private List<Resource> filterMenusForCurrentUser(List<Resource> menus) {
+    private List<MenuEntry> filterMenusForCurrentUser(List<MenuEntry> menus, Long tenantIdForAudit) {
         if (menus == null || menus.isEmpty()) {
             return List.of();
         }
+        Set<String> authorityCodes = resolveCurrentAuthorityCodes();
+        Map<Long, RequirementAwareAuditDetail> details =
+            carrierPermissionRequirementEvaluator.resolveMenuRequirementDetails(menus, authorityCodes);
+
+        Set<Long> allowedMenuIds = details.entrySet().stream()
+            .filter(e -> "ALLOW".equalsIgnoreCase(e.getValue().decision()))
+            .map(Map.Entry::getKey)
+            .collect(Collectors.toSet());
+
+        details.values().forEach(detail -> {
+            try {
+                authorizationAuditService.logRequirementAware(
+                    AuthorizationAuditEventType.REQUIREMENT_AWARE_ACCESS,
+                    tenantIdForAudit,
+                    "menu-runtime-tree",
+                    detail
+                );
+            } catch (Exception ex) {
+                logger.warn(
+                    "Requirement-aware menu audit failed (tenantId={}, carrierId={}, carrierType={})",
+                    tenantIdForAudit,
+                    detail == null ? null : detail.carrierId(),
+                    detail == null ? null : detail.carrierType(),
+                    ex
+                );
+            }
+        });
+
         return menus.stream()
-            .filter(this::canAccessTreeMenu)
+            .filter(this::canAccessPlatformMenu)
+            .filter(menu -> menu != null && allowedMenuIds.contains(menu.getId()))
             .toList();
     }
 
-    private List<Resource> findTreeMenusForCurrentUser(Long tenantId) {
-        List<ResourceType> menuTypes = List.of(ResourceType.DIRECTORY, ResourceType.MENU);
-        if (hasAnyOfAuthorities(LegacyAuthConstants.ADMIN_AUTHORITIES)) {
-            return filterPlatformOnlyMenus(resourceRepository.findByTypeInAndTenantIdOrderBySortAsc(menuTypes, tenantId));
+    private List<MenuEntry> findTreeMenusForCurrentUser(Long tenantId) {
+        List<Integer> menuTypeCodes = List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode());
+        if (TenantContext.isPlatformScope()) {
+            return filterMenusForCurrentUser(
+                menuEntryRepository.findByTenantIdIsNullAndTypeInOrderBySortAsc(menuTypeCodes),
+                tenantId
+            );
         }
-
-        String username = resolveCurrentUsername();
-        if (!StringUtils.hasText(username)) {
-            return filterMenusForCurrentUser(resourceRepository.findByTypeInAndTenantIdOrderBySortAsc(menuTypes, tenantId));
-        }
-
-        List<Integer> menuTypeCodes = List.of(ResourceType.MENU.getCode());
-        List<Resource> directories = resourceRepository.findByTypeAndTenantIdOrderBySortAsc(ResourceType.DIRECTORY, tenantId);
-        List<Resource> grantedMenus = resourceRepository.findGrantedResourcesByUsernameAndTenantId(
-            username,
-            tenantId,
-            menuTypeCodes
+        return filterMenusForCurrentUser(
+            menuEntryRepository.findByTenantIdAndTypeInOrderBySortAsc(tenantId, menuTypeCodes),
+            tenantId
         );
-        return mergeTreeMenus(directories, grantedMenus);
     }
 
-    private List<Resource> findChildMenusForCurrentUser(Long parentId, Long tenantId) {
-        if (hasAnyOfAuthorities(LegacyAuthConstants.ADMIN_AUTHORITIES)) {
-            List<Resource> menus;
-            if (parentId == null) {
-                menus = resourceRepository.findByTypeInAndParentIdIsNullAndTenantIdOrderBySortAsc(
-                    List.of(ResourceType.DIRECTORY, ResourceType.MENU),
-                    tenantId
-                );
-            } else {
-                menus = resourceRepository.findByTypeInAndParentIdAndTenantIdOrderBySortAsc(
-                    List.of(ResourceType.DIRECTORY, ResourceType.MENU),
-                    parentId,
-                    tenantId
-                );
-            }
-            return filterPlatformOnlyMenus(menus);
-        }
-
-        String username = resolveCurrentUsername();
-        if (!StringUtils.hasText(username)) {
-            List<Resource> menus;
-            if (parentId == null) {
-                menus = resourceRepository.findByTypeInAndParentIdIsNullAndTenantIdOrderBySortAsc(
-                    List.of(ResourceType.DIRECTORY, ResourceType.MENU),
-                    tenantId
-                );
-            } else {
-                menus = resourceRepository.findByTypeInAndParentIdAndTenantIdOrderBySortAsc(
-                    List.of(ResourceType.DIRECTORY, ResourceType.MENU),
-                    parentId,
-                    tenantId
-                );
-            }
-            return filterMenusForCurrentUser(menus);
-        }
-
-        List<Resource> directories;
+    private List<MenuEntry> findChildMenusForCurrentUser(Long parentId, Long tenantId) {
+        List<MenuEntry> menus;
         if (parentId == null) {
-            directories = resourceRepository.findByTypeInAndParentIdIsNullAndTenantIdOrderBySortAsc(
-                List.of(ResourceType.DIRECTORY),
-                tenantId
-            );
+            menus = TenantContext.isPlatformScope()
+                ? menuEntryRepository.findByTenantIdIsNullAndTypeInAndParentIdIsNullOrderBySortAsc(
+                    List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode())
+                )
+                : menuEntryRepository.findByTenantIdAndTypeInAndParentIdIsNullOrderBySortAsc(
+                    tenantId,
+                    List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode())
+                );
         } else {
-            directories = resourceRepository.findByTypeInAndParentIdAndTenantIdOrderBySortAsc(
-                List.of(ResourceType.DIRECTORY),
-                parentId,
-                tenantId
-            );
+            menus = TenantContext.isPlatformScope()
+                ? menuEntryRepository.findByTenantIdIsNullAndTypeInAndParentIdOrderBySortAsc(
+                    List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode()),
+                    parentId
+                )
+                : menuEntryRepository.findByTenantIdAndTypeInAndParentIdOrderBySortAsc(
+                    tenantId,
+                    List.of(ResourceType.DIRECTORY.getCode(), ResourceType.MENU.getCode()),
+                    parentId
+                );
         }
-        List<Integer> menuTypeCodes = List.of(ResourceType.MENU.getCode());
-        List<Resource> grantedMenus = resourceRepository.findGrantedResourcesByUsernameAndTenantIdAndParentId(
-            username,
-            tenantId,
-            menuTypeCodes,
-            parentId
-        );
-        return mergeTreeMenus(directories, grantedMenus);
+        return filterMenusForCurrentUser(menus, tenantId);
     }
 
-    private List<Resource> mergeTreeMenus(List<Resource> directories, List<Resource> grantedMenus) {
-        Map<Long, Resource> merged = new LinkedHashMap<>();
-        Stream.concat(
-                directories == null ? Stream.empty() : directories.stream(),
-                grantedMenus == null ? Stream.empty() : grantedMenus.stream()
-            )
-            .filter(Objects::nonNull)
-            .filter(this::canAccessPlatformMenu)
-            .sorted(Comparator
-                .comparing(Resource::getSort, Comparator.nullsLast(Integer::compareTo))
-                .thenComparing(Resource::getId, Comparator.nullsLast(Long::compareTo)))
-            .forEach(resource -> merged.putIfAbsent(resource.getId(), resource));
-        return new ArrayList<>(merged.values());
+
+    private boolean canAccessPlatformMenu(MenuEntry menu) {
+        if (menu == null) {
+            return false;
+        }
+        Resource marker = new Resource();
+        marker.setName(menu.getName());
+        marker.setPermission(menu.getPermission());
+        marker.setUrl(menu.getPath());
+        marker.setUri("");
+        if (PlatformControlPlaneResourcePolicy.isTenantManagementResource(marker)) {
+            return hasPlatformAdminAccess();
+        }
+        if (PlatformControlPlaneResourcePolicy.isIdempotentOpsResource(marker)) {
+            return hasPlatformAdminAccess() && hasAuthority("idempotent:ops:view");
+        }
+        return true;
     }
 
     private boolean canAccessPlatformMenu(Resource resource) {
@@ -1047,35 +1305,117 @@ public class MenuServiceImpl implements MenuService {
         return hasMenuAuthority(resource.getPermission());
     }
 
-    private boolean hasMenuAuthority(String permission) {
-        if (hasAnyOfAuthorities(LegacyAuthConstants.ADMIN_AUTHORITIES)) {
-            return true;
+    private boolean canAccessTreeMenu(MenuEntry menu) {
+        if (!canAccessPlatformMenu(menu)) {
+            return false;
         }
+        if (menu == null || menu.getType() == null) {
+            return false;
+        }
+        return carrierPermissionRequirementEvaluator.isMenuAllowed(menu, resolveCurrentAuthorityCodes());
+    }
+
+    private boolean hasMenuAuthority(String permission) {
         if (!StringUtils.hasText(permission)) {
             return true;
         }
         return hasAuthority(permission.trim());
     }
 
+    private static final Set<String> PLATFORM_CONTROL_PLANE_AUTHORITIES = Set.of(
+        "system:tenant:list", "system:tenant:view",
+        "system:tenant:create", "system:tenant:edit", "system:tenant:delete"
+    );
+
     private boolean hasPlatformAdminAccess() {
-        Long platformTenantId = tenantRepository.findByCode(platformTenantProperties.getPlatformTenantCode())
-            .map(tenant -> tenant.getId())
-            .orElse(null);
-        return platformTenantId != null
-            && Objects.equals(platformTenantId, requireTenantId())
-            && hasAnyOfAuthorities(LegacyAuthConstants.ADMIN_AUTHORITIES);
+        return TenantContext.isPlatformScope()
+            && hasAnyOfAuthorities(PLATFORM_CONTROL_PLANE_AUTHORITIES);
     }
 
-    private String resolveCurrentUsername() {
+
+    private void appendMenuDataScopeFilter(StringBuilder sqlBuilder,
+                                           StringBuilder countSqlBuilder,
+                                           LinkedHashSet<Long> visibleCreatorIds) {
+        if (!requiresDataScopeFilter()) {
+            return;
+        }
+        sqlBuilder.append(" AND r.created_by IN (:visibleCreatorIds)");
+        countSqlBuilder.append(" AND r.created_by IN (:visibleCreatorIds)");
+    }
+
+    private LinkedHashSet<Long> resolveVisibleCreatorIdsForRead(Long tenantId) {
+        ResolvedDataScope scope = DataScopeContext.get();
+        if (scope == null) {
+            return new LinkedHashSet<>();
+        }
+
+        Set<Long> activeTenantUserIds = new LinkedHashSet<>(tenantUserRepository.findUserIdsByTenantIdAndStatus(tenantId, ACTIVE));
+        LinkedHashSet<Long> visibleCreatorIds = new LinkedHashSet<>();
+
+        if (!scope.getVisibleUserIds().isEmpty()) {
+            visibleCreatorIds.addAll(
+                tenantUserRepository.findUserIdsByTenantIdAndUserIdInAndStatus(
+                    tenantId,
+                    scope.getVisibleUserIds(),
+                    ACTIVE
+                )
+            );
+        }
+
+        if (!scope.getVisibleUnitIds().isEmpty()) {
+            visibleCreatorIds.addAll(
+                userUnitRepository.findUserIdsByTenantIdAndUnitIdInAndStatus(
+                    tenantId,
+                    scope.getVisibleUnitIds(),
+                    ACTIVE
+                )
+            );
+        }
+
+        Long currentUserId = extractCurrentUserId();
+        if (scope.isSelfOnly() && currentUserId != null && activeTenantUserIds.contains(currentUserId)) {
+            visibleCreatorIds.add(currentUserId);
+        }
+
+        visibleCreatorIds.retainAll(activeTenantUserIds);
+        return visibleCreatorIds;
+    }
+
+    private boolean requiresDataScopeFilter() {
+        ResolvedDataScope scope = DataScopeContext.get();
+        return scope != null && !scope.isUnrestricted();
+    }
+
+    private Long extractCurrentUserId() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (authentication == null || !authentication.isAuthenticated()) {
             return null;
         }
-        String username = authentication.getName();
-        if (!StringUtils.hasText(username) || "anonymousUser".equalsIgnoreCase(username)) {
+        Object principal = authentication.getPrincipal();
+        if (principal instanceof SecurityUser securityUser) {
+            return securityUser.getUserId();
+        }
+        String name = authentication.getName();
+        if (!StringUtils.hasText(name) || "anonymousUser".equalsIgnoreCase(name)) {
             return null;
         }
-        return username.trim();
+        try {
+            return Long.valueOf(name.trim());
+        } catch (NumberFormatException ex) {
+            return null;
+        }
+    }
+
+    private Set<String> resolveCurrentAuthorityCodes() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated()) {
+            return Set.of();
+        }
+        return authentication.getAuthorities().stream()
+            .map(grantedAuthority -> grantedAuthority.getAuthority())
+            .filter(StringUtils::hasText)
+            .map(String::trim)
+            .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
     private boolean hasAuthority(String... authorities) {
